2006-07-19 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Hide stk500v2_set_sck_period_mk2() behind an #if
	defined(HAVE_LIBUSB) as it is only used there (for the AVRISP
	mkII).

2006-07-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Fix all bugs in stk500pp.  Eliminate pagebuf, and
	use a stack-allocated buffer instead, as the pagesize can be at
	most 256 for all current AVRs anyway.

2006-07-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Use mem->desc in place of upd->memtype in more places to
	give the full name of the respective memory area, instead of
	the (possibly abbreviated) name the user typed in the -U option.

2006-07-16 Joerg Wunsch <j@uriah.heep.sax.de>

	First stab at an implementation of the STK500 parallel programming
	feature (v2 firmware only), named "stk500pp".  Still not yet
	complete: EEPROM writes not working, documentation missing, only
	ATmega16 parameters available in avrdude.conf.in, some parameters
	not yet implemented.
	* avrdude.conf.in: Add sample parameters for PP mode to ATmega16.
	* avrpart.h: Add the parallel programming control parameters.
	* avrpart.c: (Ditto.)
	* config_gram.y: Add stk500pp configuration grammar.
	* lexer.l: Add stk500pp token recognition.
	* stk500v2.h: Add declaration for stk500pp_initpgm().
	* stk500v2.c: Add stk500pp implementation.

2006-07-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix the signatures for the
	ATmega164/324 devices.

2006-07-10 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Enter the signatures for the
	ATmega164/324/644 devices.

2006-05-25 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Implement extended addressing needed
	for the ATmega256x devices.
	* avrdude.1: Document ATmega256x support.
	* doc/avrdude.texi: Document ATmega256x support.
	Also document Solaris port defaults.

2006-05-24 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c: Start implementing support for ATmega256x;
	jtag2 and bitbang programmers are working, stk500v2